<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_SequenceItem" Id="{199e60fd-594d-4fef-9d1e-e3da8bc05f6c}">
    <Declaration><![CDATA[TYPE ST_SequenceItem :
STRUCT
	nId			: UINT;
	nValue		: USINT(0..100);
	nDuration	: UINT; 
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>